--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,8 @@
-# GmapPointPicker
+= GmapPointPicker
 
 This light-weigh gem allows you to bind input fields to google map's click action. The fields get populated with the latitude and longitude of the location clicked on the map.
 
-## Installation
+== Installation
 
 Add this line to your application's Gemfile:
 
@@ -54,13 +54,13 @@ These configurations can be overridden when calling
   <div id="map-canvas" style="height:600px;"></div>
 
 
-## Development
+== Development
 
 After checking out the repo, run `bin/setup` to install dependencies. Then, run `bin/console` for an interactive prompt that will allow you to experiment.
 
 To install this gem onto your local machine, run `bundle exec rake install`. To release a new version, update the version number in `version.rb`, and then run `bundle exec rake release` to create a git tag for the version, push git commits and tags, and push the `.gem` file to [rubygems.org](https://rubygems.org).
 
-## Contributing
+== Contributing
 
 1. Fork it ( https://github.com/laiqjafri/gmap_point_picker/fork )
 2. Create your feature branch (`git checkout -b my-new-feature`)
